--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "shopify-api-node": "^2.15.0",
     "shopify-node-api": "^1.8.0"
   },
   "scripts": {
